add key bindings.

--- a/viewer.html
+++ b/viewer.html
@@ -399,13 +399,13 @@
 //       });
 //   });
 
-//   // key bindings
-//   jwerty.key('alt+l', function() {
-//     $('#share-button').trigger('click');
-//   });
-//   jwerty.key('alt+d', function() {
-//     $('#desdm-button').trigger('click');
-//   });
+  // key bindings
+  jwerty.key('t', function() {
+    $('#true-button').trigger('click');
+  });
+  jwerty.key('f', function() {
+    $('#false-button').trigger('click');
+  });
 //   jwerty.key('alt+m', function() {
 //     $('#toggle-mask-button').trigger('click');
 //   });
